My developer Edition/src/objects/Paid_Time_Off__c.object
<CustomObject>
    <fields>
        <fullName>Employee_Id__c</fullName>
        <description>Unique Id belongs to the employee of universal container</description>
        <externalId>true</externalId>
        <label>Employee Id</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Employee_name__c</fullName>
        <description>Name of the employee</description>
        <label>Employee name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Paid Time Off</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>i-{0000}</displayFormat>
        <label>id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Paid Time offs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>